fix(options): clean up bar spacing

--- a/src/components/Options/style.module.css
+++ b/src/components/Options/style.module.css
@@ -1,31 +1,3 @@
-.menu {
-	background: var(--color-options-menu-bg);
-	height: 100%;
-	position: fixed;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	width: min(40rem, 75vw);
-	color: black;
-	z-index: 100;
-	transition: all 0.2s ease-in-out;
-	transform: translateX(-100%);
-	overflow-y: auto;
-	display: flex;
-	flex-direction: column;
-}
-
-.menu.active {
-	transform: translateX(0);
-}
-
-.json {
-	max-width: 100%;
-	font-size: 1rem;
-	padding: 1rem;
-	margin: 1rem 0;
-}
-
 .button {
 	position: absolute;
 	inset: 0 auto auto 0;
@@ -129,10 +101,11 @@
 
 .options-bar {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-items: center;
 	background: var(--color-ui);
 	min-height: 4rem;
+	padding-left: 5rem;
 	transform: translateX(-100%);
 	transition: all var(--animation-duration-options)
 		var(--animation-timing-options);
